# tgpc_tender_classfication

./: pyproject.toml
tgpc_tender_classfication/: classify.py  collate.py  collate_classifications.py
